tests/golden/defaults/etcd/etcd/10_chart/etcd/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: etcd
    app.kubernetes.io/instance: etcd
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: etcd
    app.kubernetes.io/version: 3.5.19
    helm.sh/chart: etcd-11.1.3
  name: etcd
  namespace: syn-etcd
spec:
  egress:
    - {}
  ingress:
    - ports:
        - port: 2379
        - port: 2380
  podSelector:
    matchLabels:
      app.kubernetes.io/component: etcd
      app.kubernetes.io/instance: etcd
      app.kubernetes.io/name: etcd
  policyTypes:
    - Ingress
    - Egress
