tests/golden/defaults/etcd/etcd/10_chart/etcd/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/component: etcd
    app.kubernetes.io/instance: etcd
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: etcd
    app.kubernetes.io/version: 3.5.12
    helm.sh/chart: etcd-9.15.2
  name: etcd
  namespace: syn-etcd
spec:
  podManagementPolicy: Parallel
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: etcd
      app.kubernetes.io/instance: etcd
      app.kubernetes.io/name: etcd
  serviceName: etcd-headless
  template:
    metadata:
      annotations: null
      labels:
        app.kubernetes.io/component: etcd
        app.kubernetes.io/instance: etcd
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: etcd
        app.kubernetes.io/version: 3.5.12
        helm.sh/chart: etcd-9.15.2
    spec:
      affinity:
        nodeAffinity: null
        podAffinity: null
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/component: etcd
                    app.kubernetes.io/instance: etcd
                    app.kubernetes.io/name: etcd
                topologyKey: kubernetes.io/hostname
              weight: 1
      automountServiceAccountToken: false
      containers:
        - env:
            - name: BITNAMI_DEBUG
              value: 'false'
            - name: MY_POD_IP
              valueFrom:
                fieldRef:
                  fieldPath: status.podIP
            - name: MY_POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: MY_STS_NAME
              value: etcd
            - name: ETCDCTL_API
              value: '3'
            - name: ETCD_ON_K8S
              value: 'yes'
            - name: ETCD_START_FROM_SNAPSHOT
              value: 'no'
            - name: ETCD_DISASTER_RECOVERY
              value: 'no'
            - name: ETCD_NAME
              value: $(MY_POD_NAME)
            - name: ETCD_DATA_DIR
              value: /bitnami/etcd/data
            - name: ETCD_LOG_LEVEL
              value: info
            - name: ALLOW_NONE_AUTHENTICATION
              value: 'no'
            - name: ETCD_ROOT_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: etcd-etcd-root-auth
            - name: ETCD_AUTH_TOKEN
              value: jwt,priv-key=/opt/bitnami/etcd/certs/token/jwt-token.pem,sign-method=RS256,ttl=10m
            - name: ETCD_ADVERTISE_CLIENT_URLS
              value: https://$(MY_POD_NAME).etcd-headless.syn-etcd.svc.cluster.local:2379,https://etcd.syn-etcd.svc.cluster.local:2379
            - name: ETCD_LISTEN_CLIENT_URLS
              value: https://0.0.0.0:2379
            - name: ETCD_INITIAL_ADVERTISE_PEER_URLS
              value: https://$(MY_POD_NAME).etcd-headless.syn-etcd.svc.cluster.local:2380
            - name: ETCD_LISTEN_PEER_URLS
              value: https://0.0.0.0:2380
            - name: ETCD_CLUSTER_DOMAIN
              value: etcd-headless.syn-etcd.svc.cluster.local
            - name: ETCD_CERT_FILE
              value: /opt/bitnami/etcd/certs/client/cert.pem
            - name: ETCD_KEY_FILE
              value: /opt/bitnami/etcd/certs/client/key.pem
            - name: ETCD_PEER_CERT_FILE
              value: /opt/bitnami/etcd/certs/peer/cert.pem
            - name: ETCD_PEER_KEY_FILE
              value: /opt/bitnami/etcd/certs/peer/key.pem
          envFrom: null
          image: docker.io/bitnami/etcd:3.5.17-debian-12-r2
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - /opt/bitnami/scripts/etcd/healthcheck.sh
            failureThreshold: 5
            initialDelaySeconds: 60
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 5
          name: etcd
          ports:
            - containerPort: 2379
              name: client
              protocol: TCP
            - containerPort: 2380
              name: peer
              protocol: TCP
          readinessProbe:
            exec:
              command:
                - /opt/bitnami/scripts/etcd/healthcheck.sh
            failureThreshold: 5
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: false
            runAsGroup: 0
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: null
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /opt/bitnami/etcd/conf/
              name: empty-dir
              subPath: app-conf-dir
            - mountPath: /tmp
              name: empty-dir
              subPath: tmp-dir
            - mountPath: /bitnami/etcd
              name: data
            - mountPath: /opt/bitnami/etcd/certs/token/
              name: etcd-jwt-token
              readOnly: true
            - mountPath: /opt/bitnami/etcd/certs/client/
              name: etcd-client-certs
              readOnly: true
            - mountPath: /opt/bitnami/etcd/certs/peer/
              name: etcd-peer-certs
              readOnly: true
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      serviceAccountName: etcd
      volumes:
        - emptyDir: {}
          name: empty-dir
        - name: etcd-jwt-token
          secret:
            defaultMode: 256
            secretName: etcd-etcd-token-private-key
        - name: etcd-client-certs
          secret:
            defaultMode: 256
            secretName: etcd-etcd-client-auth
        - name: etcd-peer-certs
          secret:
            defaultMode: 256
            secretName: etcd-etcd-peer-auth
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 8Gi
