tests/golden/defaults/etcd/etcd/10_chart/etcd/templates/svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: 'true'
  labels:
    app.kubernetes.io/component: etcd
    app.kubernetes.io/instance: etcd
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: etcd
    app.kubernetes.io/version: 3.5.16
    helm.sh/chart: etcd-10.4.1
  name: etcd-headless
  namespace: syn-etcd
spec:
  clusterIP: None
  ports:
    - name: client
      port: 2379
      targetPort: client
    - name: peer
      port: 2380
      targetPort: peer
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/component: etcd
    app.kubernetes.io/instance: etcd
    app.kubernetes.io/name: etcd
  type: ClusterIP
