tests/golden/defaults/etcd/etcd/10_chart/etcd/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: etcd
    app.kubernetes.io/instance: etcd
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: etcd
    app.kubernetes.io/version: 3.5.16
    helm.sh/chart: etcd-10.2.19
  name: etcd
  namespace: syn-etcd
spec:
  ports:
    - name: client
      nodePort: null
      port: 2379
      targetPort: client
    - name: peer
      nodePort: null
      port: 2380
      targetPort: peer
  selector:
    app.kubernetes.io/component: etcd
    app.kubernetes.io/instance: etcd
    app.kubernetes.io/name: etcd
  sessionAffinity: None
  type: ClusterIP
